fixed broken layout  for IPhoneSE

--- a/public/assets/styles.css
+++ b/public/assets/styles.css
@@ -220,24 +220,30 @@ nav {
     }
 
     /*(HEIGHT) Fix for the LANDSCAPE mode {breaks the height of the skillsLine */
-    @media screen  and  (max-height: 600px){
+    @media screen  and  (max-height: 600px)and (min-width: 650px){
         .skillsLine a{
             height: 30vh;
         }
     }
-    @media screen  and  (max-height: 450px){
+    @media screen  and  (max-height: 450px)and (min-width: 650px){
         .skillsLine a{
-            height: 40vh;
+            height: 60vh;
         }
     }
 
-    @media screen  and  (max-height: 350px){
+    @media screen  and  (max-height: 350px) and (min-width: 650px){
         .skillsLine a{
             height: 65vh;
         }
     }
 
     /* (WIDTH) */
+    @media screen  and (max-width: 460px){
+        .skillsLine a{
+            height: 42vh;
+        }
+    }
+
     @media screen  and (max-width: 750px){
         .skillsLine a{
             font-size: 1em;
@@ -249,6 +255,8 @@ nav {
             font-size: 1.2em;
         }
     }
+
+
         .skillsLine a .skill-left{
             /* border: rgb(53, 52, 52) solid; */
             flex: 1;
